--- a/src/Video.css
+++ b/src/Video.css
@@ -1,6 +1,6 @@
 .video {
   position: relative;
-  background-color: white;
+  background-color: gray;
   width: 100%;
   height: 100%;
   scroll-snap-align: start; 
