--- a/src/VideoFooter.css
+++ b/src/VideoFooter.css
@@ -1,5 +1,25 @@
-.video__footer {
+.videoFooter {
   position: relative;
-  /* color: white; */
-  bottom: 50px;
+  color: white;
+  bottom: 100px;
+  display: flex;
+}
+
+.videoFooter__text {
+  flex: 1;
+}
+
+.videoFooter__record {
+  animation: spinTheRecord infinite 5s linear;
+  height: 50px;
+  filter: invert(1)
+}
+
+@keyframes spinTheRecord {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
